--- a/test.ipynb
+++ b/test.ipynb
@@ -2,39 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "84591975",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from a2a.types import JSONRPCErrorResponse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d4f11264",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'error': FieldInfo(annotation=Union[JSONRPCError, JSONParseError, InvalidRequestError, MethodNotFoundError, InvalidParamsError, InternalError, TaskNotFoundError, TaskNotCancelableError, PushNotificationNotSupportedError, UnsupportedOperationError, ContentTypeNotSupportedError, InvalidAgentResponseError, AuthenticatedExtendedCardNotConfiguredError], required=True, alias='error', alias_priority=1),\n",
-       " 'id': FieldInfo(annotation=Union[str, int, NoneType], required=False, default=None, alias='id', alias_priority=1),\n",
-       " 'jsonrpc': FieldInfo(annotation=Literal['2.0'], required=False, default='2.0', alias='jsonrpc', alias_priority=1)}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "JSONRPCErrorResponse.model_fields"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "26d0129e",
    "metadata": {},
@@ -51,19 +18,6 @@
    "outputs": [],
    "source": [
     "agent=RoomAgent(model_provider=\"ollama\", model_name=\"qwen3:8b\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "38c9ee16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#context_id=\"90\"\n",
-    "#inputs = {\"messages\": [{\"role\": \"user\", \"content\": \"Hi my name is varun, this is my favorite number 42\"}]}\n",
-    "#config = {'configurable': {'thread_id': context_id}}\n",
-    "#agent.graph.invoke(input=inputs, config=config)"
    ]
   },
   {
@@ -104,99 +58,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "11b2fbbc",
+   "cell_type": "markdown",
+   "id": "980abc43",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['model'])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "chunk.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "a90daf62",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'structured_response'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mchunk\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mstructured_response\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[31mKeyError\u001b[39m: 'structured_response'"
-     ]
-    }
-   ],
-   "source": [
-    "chunk['structured_response']"
+    "# Standard payload format for Agent Queries"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efd62105",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "app.agent.ResponseFormat"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Agent.format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "a4a9cb61",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "```json\n",
-      "{\n",
-      "  \"status\": \"completed\",\n",
-      "  \"response_message\": \"Hello! How can I help you today?\"\n",
-      "}\n",
-      "```\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(chunk['model']['messages'][-1].content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c6bc368",
+   "id": "16d5886b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "\n",
+    "URL = \"http://localhost:8000/chat\"\n",
+    "\n",
+    "payload = {\n",
+    "    \"query\": \"hello there\",\n",
+    "    \"context_id\": \"123\"\n",
+    "}\n",
+    "\n",
+    "res = requests.post(URL, json=payload)\n",
+    "res.json()\n"
+   ]
   }
  ],
  "metadata": {
